Update index.html: Adição de botão de exportar csv com dados dos candidatos

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <textarea id="result" placeholder="Aguardando API"></textarea>
     </form>
     <button id = "btnRequest" class="send_request">Buscar</button>
+    <button id = "btnExport" class="export_csv">Exportar</button>
 </body>
 <script src="main.js"></script>
 
